<?xml version="1.0"?>
<package format="3">
  <name>localization</name>
  <version>0.0.1</version>
  <description>Example package for IMU data publishing</description>
  <maintainer email="your-email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
